added ParamPathAssert to streamline PathParamTest